<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="local_service_started">Started</string>
    <string name="provider">Provider:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="dummy">Dummy</string>
    <string name="new_location">New Location</string>
    <string name="new_button">New</string>
    <string name="eb1230">eb1230</string>
    <string name="sparty">sparty</string>
    <string name="home">home</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="local_service_stopped">Stopped</string>
    <string name="create">Create Service</string>
    <string name="destroy">Destroy Service</string>
    <string name="TurnON">Turn On</string>
    <string name="TurnOff">Turn Off</string>
    <string name="title_activity_breslin">BreslinActivity</string>
    <string name="breslin">Breslin Center</string>
    <string name="title_activity_sparty">SpartyActivity</string>
    <string name="spartyStatue">Sparty Statue</string>
    <string name="title_activity_beaumont">BeaumontActivity</string>
    <string name="beaumont">Beaumont Tower</string>

</resources>
