<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.msu.heiderse.project3.MainActivity$FragMain" >
    <!-- region label fields -->

    <ToggleButton
        android:id="@+id/toggleService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@id/toggleService"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:onClick="ServiceChange"
        android:textOff="@string/TurnOff"
        android:textOn="@string/TurnON" />

    <!-- region label fields -->

    <TextView
        android:id="@+id/provider"
        android:layout_below="@id/toggleService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:layout_toLeftOf="@id/centerpoint"
        android:text="@string/provider"
        android:visibility="invisible" />

    <!-- endregion label fields -->
    <!-- region fields -->

    <TextView
        android:id="@+id/textProvider"
        android:layout_below="@id/toggleService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/centerpoint"
        android:text="@string/dummy"
        android:visibility="invisible" />

    <!-- endregion fields -->

    <FrameLayout
        android:id="@+id/centerpoint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" >
    </FrameLayout>


    <!-- region response -->

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textProvider"
        android:layout_centerHorizontal="true"
        android:text="@string/dummy"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <!-- endregion response -->

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textDistance"
        android:contentDescription="@string/hello_world"
        android:visibility="invisible" />
    
</RelativeLayout>
